[gd_scene load_steps=7 format=3 uid="uid://bl022wbkuohoj"]

[ext_resource type="Script" path="res://assets/scripts/elegir_nucleo.gd" id="1_h0i8w"]
[ext_resource type="Texture2D" uid="uid://fmfd1l67oxo4" path="res://assets/sprites/intro/intro_frame01.png" id="1_oplm7"]
[ext_resource type="Texture2D" uid="uid://byhkifvhvl252" path="res://assets/sprites/intro/intro_frame02.png" id="2_cl7xn"]
[ext_resource type="Texture2D" uid="uid://cjwy2vlok5cvd" path="res://assets/sprites/intro/intro_frame03.png" id="3_ua1m2"]
[ext_resource type="PackedScene" uid="uid://drx5frcgg37qy" path="res://scenes/llamada_s.tscn" id="4_1phu5"]
[ext_resource type="AudioStream" uid="uid://bbnmdvbich58l" path="res://assets/audio/MUSICA DE ASCENSOR - RELAXING BOSSA (ELEVATOR MUSIC).mp3" id="6_s3vtj"]

[node name="ElegirNucleo" type="Node2D"]
script = ExtResource("1_h0i8w")

[node name="Borde" type="Node2D" parent="."]

[node name="Frame" type="TextureRect" parent="Borde"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 58.0
offset_top = 50.0
offset_right = 1866.0
offset_bottom = 1004.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oplm7")
metadata/_edit_use_anchors_ = true

[node name="FrameDetail" type="TextureRect" parent="Borde"]
offset_left = 1491.0
offset_top = 744.0
offset_right = 1882.0
offset_bottom = 1018.0
texture = ExtResource("2_cl7xn")

[node name="FrameDetail2" type="TextureRect" parent="Borde"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1864.0
offset_top = 50.0
offset_right = 1904.0
offset_bottom = 262.0
grow_vertical = 0
texture = ExtResource("3_ua1m2")

[node name="Llamadas" type="Node2D" parent="."]

[node name="LlamadaS" parent="Llamadas" instance=ExtResource("4_1phu5")]
position = Vector2(166, 153)
num_linea = 1
video_path = "res://assets/videos/llamada_01/esperando_s.ogv"

[node name="LlamadaS2" parent="Llamadas" instance=ExtResource("4_1phu5")]
position = Vector2(770, 155)
num_linea = 2
video_path = "res://assets/videos/llamada_02/esperando_s.ogv"

[node name="LlamadaS3" parent="Llamadas" instance=ExtResource("4_1phu5")]
position = Vector2(1363, 161)
num_linea = 3
video_path = "res://assets/videos/llamada_03/esperando_s.ogv"

[node name="LlamadaS4" parent="Llamadas" instance=ExtResource("4_1phu5")]
position = Vector2(471, 593)
num_linea = 4
video_path = "res://assets/videos/llamada_04/esperando_s.ogv"

[node name="LlamadaS5" parent="Llamadas" instance=ExtResource("4_1phu5")]
position = Vector2(1090, 591)
num_linea = 5
video_path = "res://assets/videos/llamada_05/esperando_s.ogv"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_s3vtj")
volume_db = -9.0
parameters/looping = true

[connection signal="clickeado" from="Llamadas/LlamadaS" to="." method="_on_linea_elegida"]
[connection signal="clickeado" from="Llamadas/LlamadaS2" to="." method="_on_linea_elegida"]
[connection signal="clickeado" from="Llamadas/LlamadaS3" to="." method="_on_linea_elegida"]
[connection signal="clickeado" from="Llamadas/LlamadaS4" to="." method="_on_linea_elegida"]
[connection signal="clickeado" from="Llamadas/LlamadaS5" to="." method="_on_linea_elegida"]
